@@ -1,3 +1,8 @@
+2009-07-28  Rolf Bjarne Kvinge  <RKvinge@novell.com>
+
+	* DB.cs: Add a CreateCommand overload that specifies
+	a timeout.
+
 2009-07-23  Rolf Bjarne Kvinge  <RKvinge@novell.com>
 
 	* SchedulerSVN.cs:
